background.css
/* CSS Selectors:
- HTML elements (div, nav, etc.)
- HTML class attributes: .class-name (.btn)
- HTML ID, unique: #id (#searchButton)

!important means forced coloring 

CSS attributes & values: [attribute="value"] 
* = all, div[class*="test"]
~ = specific word, [title~="flower"]
^ = whose value starts with the specified value, [class^="top"]
Read more here: https://www.w3schools.com/css/css_attribute_selectors.asp */



/* DARK COLORING */
h1, h2, table, body, th, nav, tbody, li, ul, input, abbr, a, caption, tr, p, dl, blockquote, label, header,

/* Avoid using element "div" only */
div[id*="m"], div[class*="toc"], div.mw-body, div.navbox, div.catlinks, div.thumbcaption, div.thumbinner, div.metadata.plainlinks.sistersitebox.plainlist.sister-box.mbox-small,
div.portal-bar, div.suggestions-result, div.special-label, div.special-query, div.suggestions-special, div.editOptions, div[id*="wikiEditor-ui-toolbar"], div.sidebar-list-title,
div.oo-ui-popupWidget-head, div.oo-ui-widget.oo-ui-widget-enabled.mw-echo-ui-placeholderItemWidget.oo-ui-labelElement, div[class^="mwe"], div[class^="noprint"],
div[style*="clear"], div.NavHead, div.plainlinks, div[style*="lavender"], div.mw-mmv-above-fold, div.mw-mmv-image-metadata, div.thumb, div[id*="ooui-php-"], div.mw-prefs-buttons,
div[style*="background-color: #D9E6F3"], div[style*="background-color: #FAFAFF"], div[style*="background-color: #FFF"], div[class*="hauptseite"], div[style*="display"],
div[class*="main-top"], div[class*="mw-page-container"], div[id="accueil_2017_bandeau"], div[class*="infobox"], div[class*="bandeau"], div[id^="edit"], div#deltagande

/* Avoid using element "td" only since it will override colors in some tables */
td.infobox-subheader, td.MainPageBG, td.sidebar-above, td.sidebar-below, td.sidebar-navbar,
td.navbox-abovebelow, td.infobox-below, td.sidebar-content, td.plainlist, td.navbox-group, td[class*="navbox"],
td[style^="background:lavender"], td[style*="background-color:#DCDCDC"] {
  background-color: #0d1117 !important;
}

/* LIGHT GREY TEXT COLORING */
h1, h2, h3, h4, p, th, td, li, input, b, i, caption, .oo-ui-labelWidget, samp, span, textarea,
div.noprint, div.thumbcaption, div.mw-parser-output, div[class*="hatnote"], div.metadata.plainlinks.sistersitebox.plainlist.sister-box.mbox-small,
div.suggestions-result, div.special-label, div.suggestions-special, div.special-query, div[id*="mp"], div.mw-echo-ui-notificationItemWidget-content-message-header, div[style*="padding-left"] {
  color: #c9d1d9 !important;
}

/* DARK TEXT COLORING ON TABLES (refactor) */
td[style*="background-color: #FDB3AB"], td[style*="background-color: #FEF8C6"], td[style*="background-color: #D4F4B4"]>b, td[style*="background-color: #FED1A0"],
td[style*="background-color:#FFB6B6"], td[style*="background-color:#FFB6B6"]>b, td[style*="background-color:#B0CEFF"], td[style*="background-color:#B0CEFF"]>b,
td[style*="background:#EEEEEE"], td[style*="background:#FED105"], td[style*="background:#A356DE"], td[style*="background-color:#DDDDDD"], td[style*="background:#17aa5c"],
td[style*="background:#ffb6b6"], td[style*="background:#f0f0ff"], td[style*="background:#b0ceff"], td[style*="background:#fff3f3"], td.included {
   color: #0d1117 !important;
 }

/* LIGHTER DARK BLUE */
.mp-h2, th.headerSort, th.unsortable, span[style*="width:7.5em"], td[style*="background-color: #F2F2F2"], div[style*="padding-left"], textarea,
span.mw-ui-button, td[style*="text-align:center;background:#f0f0f0"], td[style*="background-color:#f0f0ff"], td[style*="background:#f1f1f1"],
th.infobox-above, th.summary, div[id*="ooui-php-498"], span[class*="oo-ui-dropdownWidget-handle"], div[id*="ooui-30"], div[id*="ooui-1"], div[id*="ooui-2"], div[id*="ooui-3"], div[id*="ooui-4"], 
div[id*="ooui-5"], div[id*="ooui-8"], div[id*="ooui-9"] {
  background-color: #21262d !important;
}

/* LIGHT BLUE (CLICKABLE TEXT) */
a, .tocnumber, .toctext, label.toctogglelabel {
  color: #58a6ff !important;
}

/* LIGHT GREY BACKGROUND FOR GRAPHS */
canvas {
  background-color: #c9d1d9 !important;
}

/* LATEX LIGHT GREY */
pre, code, .hll, tr::before {
  background-color: #21262d !important;
  color: #c9d1d9 !important;
}

/* https://en.wikipedia.org/wiki/Ivan_Reitman#Recurring_cast_members */
img.mwe-math-fallback-image-inline, img.mwe-math-fallback-image-display, .helpContents-icon,
img[src="//upload.wikimedia.org/wikipedia/commons/thumb/a/a9/Black_x.svg/16px-Black_x.svg.png"] {
    filter: invert(90%) !important;
}

/* DARK GREY BACKGROUND - ICONS VISIBLE */
[class^="oo-ui-icon"], .oo-ui-icon-tray, .oo-ui-icon-bell, #searchButton, .mw-helplink, .oo-ui-indicator-down, .oo-ui-iconWidget, .infobox-above.summary {
  background-color: #6e7681 !important;
}

/* PROGRESS BARS COLORING (TABLES) */
div[role="img"] {
  background-color: #21262d !important;
}

/* https://en.wikipedia.org/wiki/2019_Danish_general_election */
td[class^="ib-legis"], td[class^="nowrap"], td[style*="background-color:#eee"] {
  background-color: #0d1117 !important;
}



/* CODE SYNTAX COLORS */
span.kd, span.kn, a.new {
  color: #FF7B72 !important;
}
span.na, span.k, span.nb, span.kr, span.vg {
  color: #FFA657 !important;
}
span.linenos, td.table-na, td.no.table-no2 {
  background-color: #0d1117 !important;
}
span.nc, span.nf, span.kt {
  color: #D2A6D7 !important;
}
span[class^="s"], span.nn, span.c, span.nv {
  color: #A5D6FF !important;
}
span.c1, span.cm, td.table-partial, span.o, span.mi, span.mf, span.fm {
  color: #b2b4b6 !important;
}

